--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "io.infinitecanvas.inkintegration",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "displayName": "Ink Integration",
   "description": "Ink Integration for games we want to make!",
   "unity": "6000.1",
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "com.unity.logging": "1.3.6",
-    "com.inkle.ink-unity-integration": "https://github.com/inkle/ink-unity-integration.git?path=Packages/Ink",
+    "com.inkle.ink-unity-integration": "https://github.com/inkle/ink-unity-integration.git#upm",
     "com.cysharp.messagepipe": "https://github.com/Cysharp/MessagePipe.git?path=src/MessagePipe.Unity/Assets/Plugins/MessagePipe",
     "com.cysharp.messagepipe.vcontainer": "https://github.com/Cysharp/MessagePipe.git?path=src/MessagePipe.Unity/Assets/Plugins/MessagePipe.VContainer",
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
