changed logging to use serilog

--- a/Runtime/io.infinitecanvas.inkintegration.asmdef
+++ b/Runtime/io.infinitecanvas.inkintegration.asmdef
@@ -11,7 +11,8 @@
     "MessagePipe.VContainer",
     "MessagePipe",
     "UniTask",
-    "Ink-Libraries"
+    "Ink-Libraries",
+    "io.infinitecanvas.serilogintegration"
   ],
   "includePlatforms": [],
   "excludePlatforms": [],
