--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "io.infinitecanvas.inkintegration",
-  "version": "3.0.0",
+  "version": "4.1.0",
   "displayName": "Ink Integration",
   "description": "Ink Integration for games we want to make!",
   "unity": "6000.1",
@@ -15,6 +15,7 @@
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
     "jp.hadashikick.vcontainer": "https://github.com/hadashiA/VContainer.git?path=VContainer/Assets/VContainer",
     "io.infinitecanvas.poolingutility": "https://github.com/InfiniteCanvas/Pooling-Utility.git",
+    "io.infinitecanvas.utilitiesforunity": "https://github.com/InfiniteCanvas/Utilities-For-Unity.git",
     "io.infinitecanvas.serilogintegration": "https://github.com/InfiniteCanvas/Serilog-Integration.git"
   },
   "samples": [
